Added global header with state cache and a test html page

--- a/www/templates/setup.html
+++ b/www/templates/setup.html
@@ -1,15 +1,15 @@
-      <ion-view title="setup">
+      <ion-view title="Setup">
             <ion-pane>
-              <ion-header-bar class="bar-positive">
+<!--               <ion-header-bar class="bar-positive">
                 <h1 class="title">Setup Study</h1>
-              </ion-header-bar>
+              </ion-header-bar> -->
               <ion-content>
                 <div class="card">
                   <div class="item item-text-wrap">
                     <p>Looks like you have no current studies.</p>
-                    <button class="button button-block button-energized">
+                    <a class="button button-block button-energized" ui-sref="test">
                       Setup a New Study
-                    </button>
+                    </a>
                   </div>
                 </div>
               </ion-content>
