--- a/www/templates/past.html
+++ b/www/templates/past.html
@@ -1,8 +1,8 @@
-<ion-view title="past">
+<ion-view title="Past">
             <ion-pane>
-              <ion-header-bar class="bar-positive">
+              <!-- <ion-header-bar class="bar-positive">
                 <h1 class="title">Past Studies</h1>
-              </ion-header-bar>
+              </ion-header-bar> -->
               <ion-content>
                 <div class="list">
                     <a class="item">
