--- a/www/templates/schedule.html
+++ b/www/templates/schedule.html
@@ -1,8 +1,8 @@
-<ion-view title="schedule">
+<ion-view title="Schedule">
     <ion-pane>
-        <ion-header-bar class="bar-positive">
+<!--         <ion-header-bar class="bar-positive">
             <h1 class="title">Schedule</h1>
-        </ion-header-bar>
+        </ion-header-bar> -->
     	<ion-content>
 
     	</ion-content>
