--- a/www/templates/symptoms.html
+++ b/www/templates/symptoms.html
@@ -1,8 +1,8 @@
-      <ion-view title="symptoms">
+      <ion-view title="Symptoms">
             <ion-pane>
-              <ion-header-bar class="bar-positive">
+<!--               <ion-header-bar class="bar-positive">
                 <h1 class="title">Symptoms</h1>
-              </ion-header-bar>
+              </ion-header-bar> -->
               <ion-content>
 
               </ion-content>
