Added modal to the header_test page

--- a/www/templates/header_test.html
+++ b/www/templates/header_test.html
@@ -11,4 +11,7 @@
       </div>
       <a class="button icon ion-home" ui-sref="nav.home"> Home</a>
       </ion-content> -->
+      <ion-content>
+      <button class="button button-block button-energized" ng-controller='MainCtrl' ng-click="openModal()">Modal</button>
+      </ion-content>
     </ion-view>
