Converted trigger list to checklist and moved the info icon outside of the list column

--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -2,3 +2,11 @@
 .ten-padding {
     padding: 10px !important;
 }
+
+.nfive-padding {
+	padding: -5px !important;
+}
+
+.zero-padding {
+	padding: 0px !important;
+}
