--- a/www/templates/setup.html
+++ b/www/templates/setup.html
@@ -6,10 +6,8 @@
                 <div class="col"><i class="ion-calendar font-big"></i></div>
                 <div class="col col-80"><h3 class="title">Setup a new study</h3></div>
             </div>      
-            <div class="ten-padding">      
-              <p>This app will guide you through self-studies to see whether eating certain food affects your symptoms.</p>
-              <p>During this study, you will be asked to eat certain foo on some days and not eat that food on other days. We will aslo help you track your symptoms by sending you daily remiinders to log them.</p>
-              <br>
+            <div class="ten-padding" ng-bind-html="rawHtml">      
+              
 
           <a class="button button-block button-energized" ui-sref="setup2">
             Let's Begin! <!-- icon ion-plus-round -->
